Remove Readme.txt and update portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,17 +88,17 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-1.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/portfolio-1.webp" class="glightbox portfolio-lightbox"><i
-                        class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://scanner-plagiarisme-pdf.vercel.app/" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Business Growth Strategy</h4>
-                  <p>Strategic Planning</p>
+                  <h4>Scanner Plagiarisme PDF</h4>
+                  <p>Sistem pengecekan kemiripan otomatis untuk modul mahasiswa. Cepat dan sederhana — cocok untuk
+                    pemeriksaan awal.</p>
                   <div class="portfolio-tags">
-                    <span>Strategy</span>
-                    <span>Consulting</span>
+                    <span>Upload PDF</span>
+                    <span>Deteksi</span>
                   </div>
                 </div>
               </div>
