Update portfolio-5.webp and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,11 +178,11 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Market Expansion</h4>
-                  <p>Strategic Planning</p>
+                  <h4>Museum Kayu & Kriya Ambar Polah</h4>
+                  <p>Museum Kayu dan Kriya "Ambar Polah" telah mengawali cita-cita berdiri sebagai museum sejak tahun 1986 dari alm. Bapak Ambar Polah Tjahyono dan ibu Mursupriyani, pada tahun 2025.</p>
                   <div class="portfolio-tags">
-                    <span>Strategy</span>
-                    <span>Growth</span>
+                    <span>Museum Kayu</span>
+                    <span>Kriya Ambar Polah</span>
                   </div>
                 </div>
               </div>
@@ -193,9 +193,7 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox portfolio-lightbox"><i
-                        class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
