--- a/portfolio.html
+++ b/portfolio.html
@@ -172,9 +172,7 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox portfolio-lightbox"><i
-                        class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
