Update portfolio section and add weather project images

--- a/portfolio.html
+++ b/portfolio.html
@@ -172,15 +172,68 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>Museum Kayu & Kriya Ambar Polah</h4>
-                  <p>Museum Kayu dan Kriya "Ambar Polah" telah mengawali cita-cita berdiri sebagai museum sejak tahun 1986 dari alm. Bapak Ambar Polah Tjahyono dan ibu Mursupriyani, pada tahun 2025.</p>
+                  <p>Museum Kayu dan Kriya "Ambar Polah" telah mengawali cita-cita berdiri sebagai museum sejak tahun
+                    1986 dari alm. Bapak Ambar Polah Tjahyono dan ibu Mursupriyani, pada tahun 2025.</p>
                   <div class="portfolio-tags">
                     <span>Museum Kayu</span>
                     <span>Kriya Ambar Polah</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/Screenshot 2025-11-28 093105.webp.jpg" alt="Portfolio Item"
+                    class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="https://ngodinghappy.netlify.app/beranda" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Web Ngoding Happy</h4>
+                  <p> Belajar coding itu capek? Kamu nggak sendiri.
+                    Makanya Ngoding Happy hadir buat bantu kamu berkembang lewat e-book berkualitas yang bisa kamu
+                    download gratis.
+                    Karena tiap developer pantas untuk belajar tanpa hambatan.
+                  </p>
+                  <div class="portfolio-tags">
+                    <span>Edukasi</span>
+                    <span>E-book</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/cuaca.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="https://weather-website-seven.vercel.app/" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Weather Website React js</h4>
+                  <p> Weather Website adalah aplikasi web prediksi cuaca real-time yang dibangun menggunakan React JS
+                    dengan tampilan modern dan responsif.
+                    Pengguna cukup memasukkan nama kota / lokasi, dan sistem akan menampilkan informasi cuaca secara
+                    lengkap, akurat, dan up-to-date.
+                  </p>
+                  <div class="portfolio-tags">
+                    <span>Weather API</span>
+                    <span>React JS</span>
                   </div>
                 </div>
               </div>
@@ -191,7 +244,8 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
