Add Vaccine App image and update portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -153,15 +153,45 @@
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://www.figma.com/proto/PSs3tyDLbIfsJiF5K4MpqB/Dzikir-App?node-id=48-121&scaling=scale-down&page-id=0%3A1&starting-point-node-id=48%3A121"
+                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Digital Transformation</h4>
-                  <p>Technology Consulting</p>
+                  <h4>Aplikasi Doa & Dzikir Setelah Sholat</h4>
+                  <p>Aplikasi ini berisi kumpulan doa dan dzikir setelah sholat yang disusun berdasarkan tuntunan sunnah
+                    Nabi Muhammad.. Setiap bacaan dilengkapi dengan tulisan Arab, latin, dan terjemahan Bahasa
+                    Indonesia, sehingga sangat memudahkan pengguna untuk membaca, memahami, dan menghafalnya dengan
+                    benar.</p>
                   <div class="portfolio-tags">
-                    <span>Technology</span>
-                    <span>Innovation</span>
+                    <span>Aplikasi</span>
+                    <span>Desain</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/vaksin.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/vaksin.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                    <a href="https://www.figma.com/proto/PSs3tyDLbIfsJiF5K4MpqB/Dzikir-App?node-id=48-121&scaling=scale-down&page-id=0%3A1&starting-point-node-id=48%3A121"
+                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Vaccine App</h4>
+                  <p>Vaccine App adalah aplikasi yang dikembangkan untuk memudahkan masyarakat dalam melakukan
+                    pendaftaran vaksin secara cepat, praktis, dan tanpa harus antre di lokasi.
+                    Melalui aplikasi ini, pengguna dapat chat langsung dengan dokter, mengetahui lokasi rumah sakit
+                    terdekat, hingga mendapatkan informasi jadwal vaksin yang tersedia.</p>
+                  <div class="portfolio-tags">
+                    <span>Aplikasi</span>
+                    <span>Desain</span>
                   </div>
                 </div>
               </div>
