Add RoofCookLF App image and update portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/vaksin.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="https://www.figma.com/proto/PSs3tyDLbIfsJiF5K4MpqB/Dzikir-App?node-id=48-121&scaling=scale-down&page-id=0%3A1&starting-point-node-id=48%3A121"
+                    <a href="#"
                       class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
@@ -189,6 +189,32 @@
                     pendaftaran vaksin secara cepat, praktis, dan tanpa harus antre di lokasi.
                     Melalui aplikasi ini, pengguna dapat chat langsung dengan dokter, mengetahui lokasi rumah sakit
                     terdekat, hingga mendapatkan informasi jadwal vaksin yang tersedia.</p>
+                  <div class="portfolio-tags">
+                    <span>Aplikasi</span>
+                    <span>Desain</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/RoofCookLF App.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/RoofCookLF App.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                    <a href="#"
+                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>RoofCookLF App</h4>
+                  <p>RoofCookLF App adalah aplikasi panduan memasak yang menyediakan berbagai informasi resep masakan
+                    Indonesia dan internasional secara lengkap dan mudah dipahami.
+                    Di sini, pengguna dapat menemukan beragam resep mulai dari masakan rumahan, makanan tradisional
+                    Nusantara, hingga menu khas mancanegara.</p>
                   <div class="portfolio-tags">
                     <span>Aplikasi</span>
                     <span>Desain</span>
