--- a/portfolio.html
+++ b/portfolio.html
@@ -111,19 +111,42 @@
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Financial Restructuring</h4>
-                  <p>Financial Advisory</p>
+                  <h4>plakat acara Kulum</h4>
+                  <p>plakat acara Kulum Himaforka, sebuah kegiatan yang penting bagi organisasi mahasiswa di kampus.
+                    Dalam menggarap proyek ini, saya mengawali dengan berdiskusi dengan panitia acara untuk memahami
+                    tema, tujuan, dan pesan yang ingin disampaikan melalui plakat tersebut.</p>
                   <div class="portfolio-tags">
-                    <span>Finance</span>
-                    <span>Investment</span>
+                    <span>Desain</span>
+                    <span>plakat</span>
                   </div>
                 </div>
               </div>
             </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/lelang.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                      <a href="assets/img/portfolio/lelang1.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Aplikasi lelang</h4>
+                  <p>Membuat website untuk platform lelang online yang inovatif. Platform ini bertujuan memberikan pengalaman yang efisien dan transparan bagi para pengguna yang ingin membeli dan menjual barang melalui proses lelang.</p>
+                  <div class="portfolio-tags">
+                    <span>Aplikasi lelang</span>
+                    <span>Lelang Online</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
               <div class="portfolio-card">
@@ -179,8 +202,7 @@
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/vaksin.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="#"
-                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
@@ -205,8 +227,7 @@
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/RoofCookLF App.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="#"
-                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
@@ -300,16 +321,18 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="https://museumkayuambarcom.vercel.app/" class="portfolio-details-link"><i
-                        class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Investment Strategy</h4>
-                  <p>Financial Advisory</p>
+                  <h4>Baju Jogja On The Go</h4>
+                  <p>Baju Jogja On The Go adalah kaos kasual dengan desain modern yang terinspirasi dari suasana dan
+                    budaya Kota Yogyakarta. Menggunakan bahan katun premium yang lembut, adem, dan nyaman dipakai
+                    sepanjang hari, kaos ini cocok untuk hangout, jalan-jalan, traveling, maupun daily outfit.</p>
                   <div class="portfolio-tags">
-                    <span>Finance</span>
-                    <span>Investment</span>
+                    <span>Baju</span>
+                    <span>Desain Baju Jogja</span>
                   </div>
                 </div>
               </div>
