update gambar sampah online dan profolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,13 +132,15 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/lelang.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                      <a href="assets/img/portfolio/lelang1.jpg" class="glightbox portfolio-lightbox"><i
+                    <a href="assets/img/portfolio/lelang1.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>Aplikasi lelang</h4>
-                  <p>Membuat website untuk platform lelang online yang inovatif. Platform ini bertujuan memberikan pengalaman yang efisien dan transparan bagi para pengguna yang ingin membeli dan menjual barang melalui proses lelang.</p>
+                  <p>Membuat website untuk platform lelang online yang inovatif. Platform ini bertujuan memberikan
+                    pengalaman yang efisien dan transparan bagi para pengguna yang ingin membeli dan menjual barang
+                    melalui proses lelang.</p>
                   <div class="portfolio-tags">
                     <span>Aplikasi lelang</span>
                     <span>Lelang Online</span>
@@ -194,6 +196,31 @@
               </div>
             </div>
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/Sampahonline.jpg alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/Sampahonline.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                    <a href="#"
+                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Aplikasi Sahabat Pengepul</h4>
+                  <p>aplikasi Sahabat Pengepul. Aplikasi ini bertujuan untuk membangun komunitas yang peduli lingkungan
+                    dan aktif dalam kegiatan daur ulang dan pengelolaan sampah. Langkah awal adalah mendalaminya dengan riset mendalam tentang identitas merek Sahabat Pengepul dan
+                    audiens targetnya. Berkomunikasi dengan tim pengembang dan pengelola aplikasi untuk memahami esensi
+                    dan visi dari komunitas ini.</p>
+                  <div class="portfolio-tags">
+                    <span>Aplikasi</span>
+                    <span>Desain</span>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
