Update portfolio.html new

--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/Sampahonline.jpg alt="Portfolio Item" class="img-fluid">
+                                   <img src="assets/img/portfolio/Sampahonline.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/Sampahonline.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
