Update portfolio Indomaret cashier project

--- a/portfolio.html
+++ b/portfolio.html
@@ -200,18 +200,18 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                                   <img src="assets/img/portfolio/Sampahonline.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/Sampahonline.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/Sampahonline.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
-                    <a href="#"
-                      class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>Aplikasi Sahabat Pengepul</h4>
                   <p>aplikasi Sahabat Pengepul. Aplikasi ini bertujuan untuk membangun komunitas yang peduli lingkungan
-                    dan aktif dalam kegiatan daur ulang dan pengelolaan sampah. Langkah awal adalah mendalaminya dengan riset mendalam tentang identitas merek Sahabat Pengepul dan
+                    dan aktif dalam kegiatan daur ulang dan pengelolaan sampah. Langkah awal adalah mendalaminya dengan
+                    riset mendalam tentang identitas merek Sahabat Pengepul dan
                     audiens targetnya. Berkomunikasi dengan tim pengembang dan pengelola aplikasi untuk memahami esensi
                     dan visi dari komunitas ini.</p>
                   <div class="portfolio-tags">
@@ -338,6 +338,29 @@
                   <div class="portfolio-tags">
                     <span>Weather API</span>
                     <span>React JS</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                 <img src="assets/img/portfolio/loginindo.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/indomaret.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Kasir Indomaret</h4>
+                  <p> Kasir Indomaret adalah sistem pelayanan ritel yang mengutamakan kecepatan, ketelitian, dan
+                    keramahan dalam setiap transaksi. Website ini menampilkan simulasi proses kasir mulai dari
+                    pemindaian produk hingga pembayaran pelanggan.
+                  </p>
+                  <div class="portfolio-tags">
+                    <span>Kasir Indomaret</span>
+                    <span>PHP</span>
                   </div>
                 </div>
               </div>
