Update portfolio.html and add jogja.jpg

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,6 +126,25 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/jogja.jpg" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/jogja.jpg" class="glightbox portfolio-lightbox"><i
+                        class="bi bi-plus"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Website Jogja Hidden Deals</h4>
+                  <p>Jogja Hidden Deals adalah website yang menghadirkan berbagai rekomendasi tempat menarik, kuliner lokal, wisata unik, dan promo tersembunyi di Yogyakarta yang jarang diketahui banyak orang. Cocok untuk kamu yang ingin menjelajah Jogja lebih dalam tanpa harus keluar biaya besar.</p>
+                  <div class="portfolio-tags">
+                    <span>Jogja</span>
+                    <span>Website</span>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
@@ -346,7 +365,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                 <img src="assets/img/portfolio/loginindo.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/loginindo.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/indomaret.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
