Update di portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,8 +131,8 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/jogja.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/jogja.jpg" class="glightbox portfolio-lightbox"><i
-                        class="bi bi-plus"></i></a>
+                    <a href="https://jogja-hidden-deals.vercel.app/" class="portfolio-details-link"><i
+                        class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
